--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,20 +8,20 @@ on:
 
 jobs:
   test:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-    step:
-      -name: Checkout code
-      uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      -name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-      -name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-      -name: Run Vitest
-      run: npx vitest run
+      - name: Run Vitest
+        run: npx vitest run
         
