--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run ESLint
+        run: npm run lint
+
       - name: Run Vitest
         run: npx vitest run
         
